--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,11 +12,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="com.example.schwusch.iotap_app.MainActivity">
+    tools:context="com.example.schwusch.iotap_app.MainActivity"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/tvText"/>
-</RelativeLayout>
+        android:text="Bluetooth Connection"
+        android:id="@+id/tvBluetooth"
+        android:textAlignment="center"
+        android:padding="5dp"
+        android:layout_margin="5dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" Server Connection"
+        android:id="@+id/tvServer"
+        android:textAlignment="center"
+        android:padding="5dp"
+        android:layout_margin="5dp" />
+</LinearLayout>
