--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -67,6 +67,22 @@
             android:layout_centerInParent="true"
             android:background="@drawable/left"
             android:visibility="gone"/>
+        <Button
+            android:id="@+id/btnQw"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="100dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/qw"
+            android:visibility="gone"/>
+        <Button
+            android:id="@+id/btnAqw"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="100dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/aqw"
+            android:visibility="gone"/>
 
 
     </RelativeLayout>
